welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:9: error: 'while' expected but 'if' found.
    if (nbbisc <= 2) { 
    ^Poucet:14: error: '(' expected but ';' found.
  nbbisc = 0
^Poucet:15: error: ';' expected but 'while' found.
  } while (!crossing())
    ^